# iTint

./: .gitignore  README.md  THIRD_PARTY  assets.qrc  itint.py  octree.py  pyproject.toml  pyside_compile.py  requirements.txt  setup.cfg  ui_color_display.py  ui_color_selector.py  ui_color_selector.ui  ui_widget.py  ui_widget.ui  widget.py  widget_color_display.py  widget_color_selector.py  widget_screenshot.py
src/itint/: assets_rc.py  main.py  pyside_compile.py  ui_color_display.py  ui_color_display.ui  ui_widget.py  ui_widget.ui  utils.py  widget.py  widget_color_display.py  widget_color_selector.py  widget_screen_color_picker.py  widget_screenshot.py
