[metadata]
name = iTint
version = 0.0.1
author = ColorsWind
author_email = colors_wind@outlook.com
description = A theme color extraction widget based on octree with multiple inputs (file, screen).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ColorsWind/iTint
project_urls =
    Bug Tracker = https://github.com/ColorsWind/iTint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pillow
    pyside2

[options.packages.find]
where = src

[options.entry_points]
gui_scripts =
    itint = itint.main:main
console_scripts =
    itint_console = itint.main:main